--- a/2_week/index.html
+++ b/2_week/index.html
@@ -65,6 +65,7 @@
         margin: 20px auto 10px auto;
         box-shadow: 0px 0px 3px 0px gray; /* 박스 그림자 생기기 */
         padding: 20px;
+        display: none;
         }
         .mypost > .mybtn {
         /* HTML 구성 정렬하기 위한 세트 */
@@ -80,52 +81,12 @@
     </style>
 
     <script>
-        let count = 0
-        function hey() {
-            count += 1
-            if (count % 2 == 0) {
-                alert("짝수입니다.")
-            } else {
-                alert("홀수입니다.")
-            }
+        function open_box() {
+            $(`#post-box`).show()     //jquery 활용하기 (클릭시 보여주기)
         }
-
-        function sum(a,b) {
-            alert('계산을 하자')
-            return a+b
+        function close_box() {
+            $(`#post-box`).hide()    //jquery 활용하기 (클릭시 숨기기)
         }
-        let result = sum(2,3)
-        alert(result)
-
-        function is_adult(age) {
-            if (age > 20 ) {
-                alert('성인입니다')
-            } else {
-                alert('성인이 아닙니다')
-            }
-        }
-
-        let a_list = ['사과', '배', '감', '딸기']
-        for (let i =0; i < a_list.length; i++) {
-            console.log(a_list[i])
-        }
-
-        let scores = [
-            {'name':'철수', 'score':90},
-            {'name':'영희', 'score':85},
-            {'name':'민수', 'score':70},
-            {'name':'형준', 'score':50},
-            {'name':'기남', 'score':68},
-            {'name':'동희', 'score':30},
-            ]
-        for (let i =0; i < scores.length; i++) {
-            if (scores[i]['score']>70) {
-            console.log(scores[i]['name'])
-            }
-        }
-
-        
-
     </script>
 
 </head>
@@ -133,10 +94,10 @@
 <body>
     <div class="mytitle">
         <H1>내 생애 최고의 영화들</H1>
-        <button onclick="hey()">영화 기록하기 ❤</button>
+        <button onclick="open_box()">영화 기록하기 ❤</button>
     </div>
 
-    <div class="mypost">
+    <div class="mypost" id="post-box">
         
         <!-- 부트스트랩 활용하여 이쁜 디자인 활용하기 -->
         <div class="form-floating mb-3">
@@ -165,7 +126,7 @@
 
         <div class="mybtn">
             <button type="button" class="btn btn-dark">기록하기</button>
-            <button type="button" class="btn btn-outline-dark">닫기</button>
+            <button onclick="close_box()" type="button" class="btn btn-outline-dark">닫기</button>
         </div>
 
     </div>
