--- a/2_week/index.html
+++ b/2_week/index.html
@@ -81,6 +81,22 @@
     </style>
 
     <script>
+        // ajax를 통해 api 데이터를 get하도록 구현
+        $.ajax({
+            type: "GET",
+            url: "http://openapi.seoul.go.kr:8088/6d4d776b466c656533356a4b4b5872/json/RealtimeCityAir/1/99",
+            data: {},
+            success: function(response){
+                let rows = response['RealtimeCityAir']['row']
+                for (let i = 0; i < rows.length; i++) {
+                    let gu_name = rows[i]['MSRSTE_NM']
+                    let gu_mise = rows[i]['IDEX_MVL']
+                    console.log(gu_name, gu_mise)
+                }
+            }
+        })
+
+
         function open_box() {
             $(`#post-box`).show()     //jquery 활용하기 (클릭시 보여주기)
         }
